--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-beautifulsoup4==4.6.3
-certifi==2018.1.18
-chardet==3.0.4
-defusedxml==0.5.0
-Django==2.2.7
-django-allauth==0.38.0
-django-tinymce==2.4.0
-django-widget-tweaks==1.4.3
-freeze==1.0.10
-gunicorn==19.6.0
-idna==2.6
-model-mommy==1.6.0
-oauthlib==2.0.6
-Pillow>=6.2.0
-psycopg2==2.8.2
-psycopg2-binary==2.7.7
-python3-openid==3.1.0
-pytz==2018.3
-requests==2.20.0
-requests-oauthlib==1.0.0
-six==1.10.0
-urllib3>=1.24.2
+Django>=6.0,<7.0
+django-allauth>=65.13.1
+django-tinymce>=3.6.0,<3.7.0
+django-widget-tweaks>=1.5.1
+psycopg2-binary>=2.9.9,<3.0.0
+gunicorn>=21.2.0,<23.0.0
+whitenoise>=6.6.0,<7.0.0
+requests>=2.32.0,<3.0.0
+requests-oauthlib>=1.3.1,<2.0.0
+oauthlib>=3.2.2,<4.0.0
+urllib3>=2.1.0,<3.0.0
+certifi>=2026.1.4,<2027.0.0
+chardet>=5.2.0,<6.0.0
+idna>=3.4,<4.0.0
+python3-openid>=3.2.0,<4.0.0
+six>=1.16.0,<2.0.0
+beautifulsoup4>=4.12.2,<5.0.0
+defusedxml>=0.7.1,<1.0.0
+Pillow>=10.2.0,<11.0.0
+model-bakery>=1.6.0,<2.0.0
