--- a/dungeonomics-chart/Chart.yaml
+++ b/dungeonomics-chart/Chart.yaml
@@ -9,3 +9,4 @@ dependencies:
   - name: postgresql
     version: 18.2.0
     repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
