--- a/dungeonomics-chart/templates/deployment.yaml
+++ b/dungeonomics-chart/templates/deployment.yaml
@@ -13,15 +13,29 @@ spec:
         app: {{ include "dungeonomics.name" . }}
     spec:
       initContainers:
-        - name: wait-for-postgres
-          image: busybox:latest
+        - name: wait-and-init-postgres
+          image: alpine/psql:latest
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "dungeonomics.fullname" . }}-secrets
+                  key: DB_PASSWORD
           command:
             - sh
             - -c
             - |
-              until nc -z {{ .Values.database.host }} {{ .Values.database.port }}; do
+              until pg_isready -h {{ .Values.database.host }} -p {{ .Values.database.port }} -U {{ .Values.database.user }}; do
                 sleep 2
               done
+
+              {{- if .Values.useExternalPostgres }}
+              DB_EXISTS=$(psql -h {{ .Values.database.host }} -p {{ .Values.database.port }} -U {{ .Values.database.user }} -d postgres -tAc "SELECT 1 FROM pg_database WHERE datname='{{ .Values.database.name }}'")
+              if [ "$DB_EXISTS" != "1" ]; then
+                psql -h {{ .Values.database.host }} -p {{ .Values.database.port }} -U {{ .Values.database.user }} -d postgres -c "CREATE DATABASE {{ .Values.database.name }};"
+              fi
+              {{- end }}
       containers:
         - name: web
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
